# ost-workflow/lib/OstWorkflow/Router.php
@@ -16,8 +16,10 @@ final class Router {
         Handlers\Catalogs::class,
         Handlers\Forms::class,
         Handlers\Canned::class,
+        Handlers\Queues::class,
         Handlers\Tickets::class,
         Handlers\Threads::class,
+        Handlers\Documents::class,
         Handlers\Files::class,
         Handlers\Tasks::class,
         Handlers\Users::class,
